[metadata]
name = lago-python-client
version = attr: lago_python_client.version.LAGO_VERSION
author = Lovro Colic
author_email = lovro@getlago.com
description = Lago Python API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getlago/lago-python-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[options]
package_dir =
    = .
packages = find:
python_requires = >3.6
install_requires =
    classes
    orjson
    requests~=2.28.2
    pydantic
    typeguard

[options.extras_require]
test =
    mypy==0.971
    pytest
    requests-mock

[options.package_data]
* = py.typed
