[metadata]
name = lago-python-client
version = attr: lago_python_client.version.LAGO_VERSION
author = Lovro Colic
author_email = lovro@getlago.com
description = Lago Python API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getlago/lago-python-client
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
package_dir =
    = .
packages = find:
python_requires = >3.6
install_requires =
    classes
    orjson
    requests~=2.28.2
    pydantic
    typeguard~=3.0.1

[options.extras_require]
test =
    mypy==0.971
    pytest
    requests-mock

[options.package_data]
* = py.typed
